--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>DX Election</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/dx-election/">
+    <base href="/">
 
     <!-- Pipes shim for IE -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
     
     <link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="styles.567615399098840d7158.css"></head>
+<link rel="stylesheet" href="styles.4506fce7a6fb88808d1c.css"></head>
 <body>
     <app-root>
         <div class="loading">
@@ -18,5 +18,5 @@
             <span>Election results<br />are loading...</span>
         </div>
     </app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="scripts.19532d35a1a98ff134b5.js"></script><script type="text/javascript" src="main.6965033355e941b1379e.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="scripts.39c2af01f5f6c7f8a2c4.js"></script><script type="text/javascript" src="main.a540b6a5eca8949c1247.js"></script></body>
 </html>
