--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>DX Election</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="/dx-election/">
 
     <!-- Pipes shim for IE -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
-    
+
     <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="styles.4506fce7a6fb88808d1c.css"></head>
 <body>
