--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <!-- Pipes shim for IE -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
-
+    
     <link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="styles.5ebcb71da415378822d4.css"></head>
+<link rel="stylesheet" href="styles.43c2af15b9a67321e9bd.css"></head>
 <body>
     <app-root>
         <div class="loading">
@@ -18,5 +18,5 @@
             <span>Election results<br />are loading...</span>
         </div>
     </app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="scripts.09e12e46e0fbf14b3cb0.js"></script><script type="text/javascript" src="main.8e166873cf636b3bf90a.js"></script></body>
+<script src="runtime.7d7e9038a1cdbceb3d53.js" defer></script><script src="polyfills-es5.723089a8098d0ca46af5.js" nomodule defer></script><script src="scripts.e7296f861063a6194794.js" defer></script><script src="main.2d8c6d477e1ae05ce3de.js" defer></script></body>
 </html>
